# microagent

./: README.md  pyproject.toml
src/microagent/: __init__.py
