[project]
name = "microagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wangmu", email = "wangmu8889@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
microagent = "microagent:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
